--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+.canvas-container {
+    margin-bottom: 10px;
+    margin-right: 10px;
+    border: 0;
+    box-shadow: rgba(0,0,0,0.5) 0 0 5px;
+}
