Add tail and mane control buttons as well as event listeners in canvas component

--- a/src/app/controls/controls.component.html
+++ b/src/app/controls/controls.component.html
@@ -1,1 +1,4 @@
-<div class="controls"></div>
+<div class="controls">
+    <button (click)="addTail()">Lisää häntä</button>
+    <button (click)="addMane()">Lisää Harja</button>
+</div>
