Changed text buttons to images

--- a/src/app/controls/controls.component.html
+++ b/src/app/controls/controls.component.html
@@ -1,4 +1,4 @@
 <div class="controls">
-    <button (click)="addTail()">Lisää häntä</button>
-    <button (click)="addMane()">Lisää Harja</button>
+    <button (click)="addTail()"><img class="control-item" src="/assets/img/hair.png" /></button>
+    <button (click)="addMane()"><img class="control-item" src="/assets/img/tail.png" /></button>
 </div>
