--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -1,2 +1,2 @@
 <canvas id="c"></canvas>
-<app-controls (addTailEvent)="addTail($event)" (addManeEvent)="addMane($event)"></app-controls>
+<app-controls (addTailEvent)="addTail($event)" (addManeEvent)="addMane($event)" (saveImageEvent)="saveImage($event)"></app-controls>
