--- a/src/app/controls/controls.component.html
+++ b/src/app/controls/controls.component.html
@@ -1,4 +1,5 @@
 <div class="controls">
     <button (click)="addTail()"><img class="control-item" src="/assets/img/hair.png" /></button>
     <button (click)="addMane()"><img class="control-item" src="/assets/img/tail.png" /></button>
+    <button (click)="saveImage()"><img class="control-item" />Save</button>
 </div>
