--- a/src/app/controls/controls.component.html
+++ b/src/app/controls/controls.component.html
@@ -2,3 +2,7 @@
     <button (click)="addTail()"><img class="control-item" src="/assets/img/hair.png" /></button>
     <button (click)="addMane()"><img class="control-item" src="/assets/img/tail.png" /></button>
 </div>
+<div class="colors">
+    <input type="color" [(ngModel)]="color">
+    <button (click)="addColor()">Vaihda väri</button>
+</div>
