Change multiple elements color at the same time

--- a/src/app/controls/controls.component.html
+++ b/src/app/controls/controls.component.html
@@ -4,6 +4,6 @@
 </div>
 <div class="colors">
     <input type="color" [(ngModel)]="color">
-    <button (click)="addColor()">Vaihda väri</button>
+    <button (click)="addColor()">Change color</button>
     <button (click)="saveImage()"><img class="control-item" />Save</button>
 </div>
