Add horn button

--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -1,2 +1,8 @@
 <canvas id="c"></canvas>
-<app-controls (addTailEvent)="addTail($event)" (addManeEvent)="addMane($event)" (addColorEvent)="addColor($event)" (saveImageEvent)="saveImage($event)"></app-controls>
+<app-controls
+        (addTailEvent)="addTail($event)"
+        (addManeEvent)="addMane($event)"
+        (addHornEvent)="addHorn($event)"
+        (addColorEvent)="addColor($event)"
+        (saveImageEvent)="saveImage($event)"
+></app-controls>
