--- a/src/app/controls/controls.component.html
+++ b/src/app/controls/controls.component.html
@@ -1,6 +1,7 @@
 <div class="controls">
     <button (click)="addTail()"><img class="control-item" src="/assets/img/hair.png" /></button>
     <button (click)="addMane()"><img class="control-item" src="/assets/img/tail.png" /></button>
+    <button (click)="addHorn()"><img class="control-item" src="/assets/img/horn.png" /></button>
 </div>
 <div class="colors">
     <input type="color" [(ngModel)]="color">
