Added another horn

--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -3,6 +3,7 @@
         (addTailEvent)="addTail($event)"
         (addManeEvent)="addMane($event)"
         (addHornEvent)="addHorn($event)"
+        (addHorn2Event)="addHorn2($event)"
         (addColorEvent)="addColor($event)"
         (saveImageEvent)="saveImage($event)"
         (resetCanvasEvent)="resetCanvas($event)"
