--- a/src/app/controls/controls.component.html
+++ b/src/app/controls/controls.component.html
@@ -4,6 +4,7 @@
     <button (click)="saveImage()">Save</button>
     <button (click)="resetCanvas()">Delete</button>
     <button (click)="addHorn()"><img class="control-item" src="/assets/img/horn.png" /></button>
+    <button (click)="addHorn2()"><img class="control-item" src="/assets/img/horn2.png" /></button>
 </div>
 <div class="colors">
     <input type="color" [(ngModel)]="color">
