--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <h1>
-  {{title}}
+  <div><span style="color:#ff0000;">H</span><span style="color:#ff1000;">a</span><span style="color:#ff2000;">k</span><span style="color:#ff3000;">s</span><span style="color:#ff4000;">u</span><span style="color:#ff4f00;"> </span><span style="color:#ff5f00;">(</span><span style="color:#ff6f00;">y</span><span style="color:#ff7f00;">k</span><span style="color:#ff8d00;">s</span><span style="color:#ff9b00;">i</span><span style="color:#ffaa00;">s</span><span style="color:#ffb800;">a</span><span style="color:#ffc600;">r</span><span style="color:#ffd400;">v</span><span style="color:#ffe300;">i</span><span style="color:#fff100;">s</span><span style="color:#ffff00;">e</span><span style="color:#dfff00;">n</span><span style="color:#bfff00;"> </span><span style="color:#9fff00;">s</span><span style="color:#80ff00;">u</span><span style="color:#60ff00;">u</span><span style="color:#40ff00;">n</span><span style="color:#20ff00;">n</span><span style="color:#00ff00;">i</span><span style="color:#00ff1c;">t</span><span style="color:#00ff39;">t</span><span style="color:#00ff55;">e</span><span style="color:#00ff71;">l</span><span style="color:#00ff8e;">u</span><span style="color:#00ffaa;">p</span><span style="color:#00ffc6;">a</span><span style="color:#00ffe3;">l</span><span style="color:#00ffff;">v</span><span style="color:#00dfff;">e</span><span style="color:#00bfff;">l</span><span style="color:#009fff;">u</span><span style="color:#0080ff;"> </span><span style="color:#0060ff;">:</span><span style="color:#0040ff;">)</span><span style="color:#0020ff;"> </span><span style="color:#0000ff;">)</span></div>
 </h1>
-
-<app-canvas></app-canvas>
+<div class="container">
+  <app-canvas></app-canvas>
+</div>
