Add text and change text color

--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -5,6 +5,7 @@
         (addHornEvent)="addHorn($event)"
         (addHorn2Event)="addHorn2($event)"
         (addColorEvent)="addColor($event)"
+        (addTextEvent)="addText($event)"
         (saveImageEvent)="saveImage($event)"
         (resetCanvasEvent)="resetCanvas($event)"
 ></app-controls>
